# Parsival-mcp

./: .agent.md  .coverage  .gitignore  Dockerfile  README.md  REMAINING_WORK.md  docker-compose.yml  implementation_plan.md  migration_handoff.md  pyproject.toml  requirements.txt  temp_debug_integration.py  temp_debug_registry.py  temp_test.txt  tmp_debug_html.py
.github/workflows/: ci.yml
Docs/: 01_Architecture.md  02_Tech_Stack.md  03_Data_Contracts.md  04_Implementation_Plan.md  05_Tasks_TODO.md  06_Project_Structure.md  07_Performance_Design.md  08_Edge_Cases.md  09_Future_Enhancements.md
fitz/: __init__.py
scripts/: tool_smoke_test.py  tool_smoke_test_http.py  tool_smoke_test_stdio.py
src/: app.py  config.py  mcp_entrypoint.py  mcp_runtime.py  mcp_stdio.py
src/core/: cache.py  executor.py  logging.py  router.py  security.py
src/models/: __init__.py  enums.py  image.py  metadata.py  parse_result.py  table.py  tool_responses.py
src/parsers/: __init__.py  base.py  csv_parser.py  doc_parser.py  docx_parser.py  html_parser.py  image_parser.py  ocr.py  pdf_parser.py  plugin_loader.py  pptx_parser.py  registry.py  streaming_chunk_emitter.py  text_parser.py  utils.py  xlsx_parser.py
src/post_processors/: image_extractor.py  metadata_enricher.py  pipeline.py  table_normaliser.py
src/serialisers/: json_serialiser.py  json_serializer.py  markdown.py  text_serializer.py
src/tools/: __init__.py  convert_to_markdown.py  extract_images.py  extract_table.py  get_metadata.py  list_supported_formats.py  read_file.py  search_file.py
tests/: conftest.py
tests/benchmarks/: test_benchmarks.py
tests/integration/: test_mcp_stdio.py  test_read_file_integration.py
tests/unit/: test_app_startup.py  test_base_parser.py  test_cache.py  test_config.py  test_convert_to_markdown.py  test_doc_parser.py  test_docx_parser.py  test_enums.py  test_extract_table_and_images.py  test_fitz_shim.py  test_get_metadata.py  test_html_parser.py  test_image.py  test_json_serializer.py  test_list_supported_formats.py  test_logging.py  test_metadata.py  test_parse_result.py  test_pdf_parser.py  test_pptx_parser.py  test_read_file_tool.py  test_registry.py  test_router.py  test_search_file.py  test_search_file_additional.py  test_serialisers_and_postprocessors.py  test_streaming_chunk_emitter.py  test_table.py  test_text_parser.py  test_tool_responses.py  test_transport_config.py  (+1 more)
