[project]
name = "parsival"
version = "0.1.0"
description = "MCP file parser system, Phase 0 foundation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core
    "mcp>=1.26.0,<2.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",

    # Core utils
    "cachetools>=5.3.0,<6.0.0",
    "structlog>=24.0.0,<25.0.0",
    "python-magic>=0.4.27",

    # 🔒 Critical compatibility pins
    "httpx==0.27.2",
    "protobuf>=5.0,<7",
    "posthog<4",

    # Observability (aligned versions)
    "opentelemetry-api>=1.28.0,<2.0.0",
    "opentelemetry-sdk>=1.28.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0,<2.0.0",
    "opentelemetry-instrumentation>=0.55b0",
    "opentelemetry-semantic-conventions>=0.55b0",
    "opentelemetry-instrumentation-urllib3>=0.50b0",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

dev = [
    "ipython",
    "pre-commit",
]

# Optional: if you later add Chainlit or similar
ui = [
    "chainlit==2.8.1",
    "fastapi==0.116.1",
    "aiofiles>=23.1.0,<25.0.0",
    "watchfiles>=0.20.0,<1.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "Q", "T"]
extend-ignore = ["C901", "E402", "F841", "T201", "E501"]

[tool.mypy]
python_version = 3.11
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"